--- a/TesiIntercettazioniTelefoniche/app/build.gradle
+++ b/TesiIntercettazioniTelefoniche/app/build.gradle
@@ -28,11 +28,16 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation files('src\\main\\java\\libs\\activation.jar')
+    implementation files('src\\main\\java\\libs\\additionnal.jar')
+    implementation files('src\\main\\java\\libs\\mail.jar')
+    implementation files('src\\main\\java\\libs\\mail.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
