--- a/TesiSensori/app/src/main/AndroidManifest.xml
+++ b/TesiSensori/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tesisensori">
-    
+
     <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="false" />
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="false" />
     <uses-feature android:name="android.hardware.sensor.proximity" android:required="false" />
     <uses-feature android:name="android.hardware.sensor.magnatic_field" android:required="false" />
     <uses-feature android:name="android.hardware.sensor.pressure" android:required="false" />
     <uses-feature android:name="android.hardware.sensor.light" android:required="false" />
-   
+    <uses-feature android:name="android.hardware.sensor.orientation" android:required="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,7 +26,6 @@
             </intent-filter>
         </activity>
     </application>
-    
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.things.permission.MANAGE_SENSOR_DRIVERS" />
